plugins {
    id 'org.springframework.boot' version '3.1.4'
    id 'io.spring.dependency-management' version '1.1.0'
    id 'java'
}

group = 'no.fintlabs'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

jar {
    enabled = false
}

repositories {
    mavenCentral()
    repositories {
        maven {
            url "https://repo.fintlabs.no/releases"
        }
    }
    mavenLocal()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-web'

    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'

    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
    implementation 'io.netty:netty-resolver-dns-native-macos:4.1.89.Final:osx-aarch_64'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    implementation 'no.fintlabs:fint-resource-server-security:1.1.0'
    implementation 'no.fintlabs:fint-kontroll-authorization:1.1.3'
//    implementation files('/Users/mortensolberg/Development/vigoikt/fint-kontroll-authorization/build/libs/fint-kontroll-authorization-0-SNAPSHOT-plain.jar')

    implementation 'org.flywaydb:flyway-core'
    runtimeOnly 'org.postgresql:postgresql'

    implementation 'org.springframework.kafka:spring-kafka'
    implementation 'no.fintlabs:fint-kafka:3.0.0-rc-1'
    implementation 'commons-io:commons-io:2.11.0'
    implementation 'org.apache.commons:commons-compress:1.23.0'

    compileOnly 'org.projectlombok:lombok'

    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'

    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    annotationProcessor 'org.projectlombok:lombok'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.springframework.kafka:spring-kafka-test:2.9.6'
    testImplementation 'cglib:cglib-nodep:3.3.0'

    testImplementation 'com.h2database:h2'
    implementation platform('org.testcontainers:testcontainers-bom:1.19.0')
    testImplementation 'org.testcontainers:testcontainers'
    testImplementation 'org.testcontainers:kafka'
    testImplementation 'org.testcontainers:postgresql'
    testImplementation 'org.testcontainers:junit-jupiter'
}

test {
    useJUnitPlatform()

    testLogging {
        exceptionFormat = 'full'
    }
}
